<resources>
    <string name="app_name">Bill Please</string>
    <string name="text_Amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="no_svs">NO SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="discount">Discount (%)</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
</resources>